k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capability-service
  namespace: $(kubernetes-namespace)
spec:
  template:
    spec:
      containers:
        - name: capability-service
          image: localhost/capability-service:dev
